objects/Exception_Fico_Guideline__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FICO__c</fullName>
        <inlineHelpText>FICO Min values</inlineHelpText>
        <label>FICO</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <inlineHelpText>LTV Min value</inlineHelpText>
        <label>LTV</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status should have one of the 3 values: "Yes", "No", "Exception".</inlineHelpText>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Exception Fico Guideline</label>
</CustomObject>